--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "gapi-client": "^0.0.3",
     "gapi-script": "^1.2.0",
+    "googleapis": "^140.0.1",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
